5.Bug: Formatei o texto da tabela, utilizando text-align:center, margin-left e margin-right: auto.

--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -100,6 +100,10 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 td button {
